@@ -1,29 +1,22 @@
 package org.example;
-import org.example.lexer.token.NativeTokenTypes;
-import org.example.lexer.token.Position;
-import org.example.lexer.token.Token;
-import org.example.lexer.token.TokenType;
-import org.example.lexer.utils.Try;
-import org.example.nodeconstructors.CallExpressionNodeConstructor;
-import org.example.nodeconstructors.ExpressionNodeConstructor;
-import org.example.nodeconstructors.NodeConstructor;
-import org.example.nodeconstructors.VariableDeclarationNodeConstructor;
-import org.junit.jupiter.api.Assertions;
+import org.token.NativeTokenTypes;
+import org.token.Position;
+import org.token.Token;
+import org.token.TokenType;
+import functional.Try;
+import org.example.nodeconstructors.*;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
-import static org.example.lexer.token.NativeTokenTypes.*;
+import static org.token.NativeTokenTypes.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 
 public class ParserTest {
 
 	@Test
-	public void testSimpleAddExpression(){
+	public void testSimpleAddExpression() throws Exception {
 		List<NodeConstructor> list = new ArrayList<>();
 		List<TokenType> expressions = new ArrayList<>();
 		expressions.add(NUMBER.toTokenType());
@@ -34,15 +27,16 @@ public class ParserTest {
 		tokens.add(new Token(NUMBER.toTokenType(), "1", new Position(1, 1, 1, 1)));
 		tokens.add(new Token(PLUS.toTokenType(), "+", new Position(2, 1, 1, 2)));
 		tokens.add(new Token(NUMBER.toTokenType(), "2", new Position(3, 1, 1, 3)));
-		TokenBuffer tokenBuffer = new TokenBuffer(tokens);
+		Accumulator accumulator = new Accumulator(tokens);
+		TokenBuffer tokenBuffer = new TokenBuffer(accumulator);
 		Parser parser = new Parser(list, new ArrayList<>(), tokenBuffer);
-		Try<ASTNode, Exception> res = parser.parseExpression();
+		Try<ASTNode> res = parser.parseExpression();
 		ASTNode node = res.getSuccess().get();
 		assertEquals("1.0 + 2.0", node.toString());
 	}
 
 	@Test
-	public void testNumberStringOperatorCombination(){
+	public void testNumberStringOperatorCombination() throws Exception {
 		List<NodeConstructor> list = new ArrayList<>();
 		List<TokenType> expressions = new ArrayList<>();
 		expressions.add(NUMBER.toTokenType());
@@ -55,15 +49,16 @@ public class ParserTest {
 		tokens.add(new Token(NUMBER.toTokenType(), "2", new Position(3, 1, 1, 3)));
 		tokens.add(new Token(ASTERISK.toTokenType(), "*", new Position(4, 1, 1, 4)));
 		tokens.add(new Token(STRING.toTokenType(), "\"hola\"", new Position(5, 6, 1, 5)));
-		TokenBuffer tokenBuffer = new TokenBuffer(tokens);
+		Accumulator accumulator = new Accumulator(tokens);
+		TokenBuffer tokenBuffer = new TokenBuffer(accumulator);
 		Parser parser = new Parser(list, new ArrayList<>(), tokenBuffer);
-		Try<ASTNode, Exception> res = parser.parseExpression();
+		Try<ASTNode> res = parser.parseExpression();
 		ASTNode node = res.getSuccess().get();
 		assertEquals("1.0 + 2.0 * hola", node.toString());
 	}
 
 	@Test
-	public void testOnlyNumber(){
+	public void testOnlyNumber() throws Exception {
 		List<NodeConstructor> list = new ArrayList<>();
 		List<TokenType> expressions = new ArrayList<>();
 		expressions.add(NUMBER.toTokenType());
@@ -72,15 +67,16 @@ public class ParserTest {
 		list.add(getExpressionNodeConstructor(expressions));
 		List<Token> tokens = new ArrayList<>();
 		tokens.add(new Token(NUMBER.toTokenType(), "1", new Position(1, 1, 1, 1)));
-		TokenBuffer tokenBuffer = new TokenBuffer(tokens);
+		Accumulator accumulator = new Accumulator(tokens);
+		TokenBuffer tokenBuffer = new TokenBuffer(accumulator);
 		Parser parser = new Parser(list, new ArrayList<>(), tokenBuffer);
-		Try<ASTNode, Exception> res = parser.parseExpression();
+		Try<ASTNode> res = parser.parseExpression();
 		ASTNode node = res.getSuccess().get();
 		assertEquals("1.0", node.toString());
 	}
 
 	@Test
-	public void testOnlyString(){
+	public void testOnlyString() throws Exception {
 		List<NodeConstructor> list = new ArrayList<>();
 		List<TokenType> expressions = new ArrayList<>();
 		expressions.add(NUMBER.toTokenType());
@@ -91,9 +87,10 @@ public class ParserTest {
 		List<Token> tokens = new ArrayList<>();
 		Position pos = new Position(1, 20, 1, 1);
 		tokens.add(new Token(str, "\"hola buenas tardes\"", pos));
-		TokenBuffer tokenBuffer = new TokenBuffer(tokens);
+		Accumulator accumulator = new Accumulator(tokens);
+		TokenBuffer tokenBuffer = new TokenBuffer(accumulator);
 		Parser parser = new Parser(list, new ArrayList<>(), tokenBuffer);
-		Try<ASTNode, Exception> res = parser.parseExpression();
+		Try<ASTNode> res = parser.parseExpression();
 		ASTNode node = res.getSuccess().get();
 		assertEquals("hola buenas tardes", node.toString());
 	}
@@ -108,7 +105,7 @@ public class ParserTest {
 	}
 
 	@Test
-	public void testOnlyIdentifier(){
+	public void testOnlyIdentifier() throws Exception {
 		List<NodeConstructor> list = new ArrayList<>();
 		List<TokenType> expressions = new ArrayList<>();
 		expressions.add(NUMBER.toTokenType());
@@ -117,15 +114,16 @@ public class ParserTest {
 		list.add(getExpressionNodeConstructor(expressions));
 		List<Token> tokens = new ArrayList<>();
 		tokens.add(new Token(IDENTIFIER.toTokenType(), "si", new Position(1, 2, 1, 1)));
-		TokenBuffer tokenBuffer = new TokenBuffer(tokens);
+		Accumulator accumulator = new Accumulator(tokens);
+		TokenBuffer tokenBuffer = new TokenBuffer(accumulator);
 		Parser parser = new Parser(list, new ArrayList<>(), tokenBuffer);
-		Try<ASTNode, Exception> res = parser.parseExpression();
+		Try<ASTNode> res = parser.parseExpression();
 		ASTNode node = res.getSuccess().get();
 		assertEquals("si", node.toString());
 	}
 
 	@Test
-	public void testVariableDeclarationWithParentheses() {
+	public void testVariableDeclarationWithParentheses() throws Exception {
 
 		List<TokenType> expressions = new ArrayList<>();
 
@@ -144,12 +142,13 @@ public class ParserTest {
 		tokens.add(new Token(NUMBER.toTokenType(), "2", new Position(9, 1, 17, 9)));
 		tokens.add(new Token(rightPar, ")", new Position(10, 1, 17, 10)));
 
-		TokenBuffer tokenBuffer = new TokenBuffer(tokens);
+		Accumulator accumulator = new Accumulator(tokens);
+		TokenBuffer tokenBuffer = new TokenBuffer(accumulator);
 		ExpressionNodeConstructor e1 = getExpressionNodeConstructor(expressions);
 		Parser parser = new Parser(new LinkedList<>(List.of(e1)), new ArrayList<>(), tokenBuffer);
 
 		// Parsear la expresión
-		Try<ASTNode, Exception> res = parser.parseExpression();
+		Try<ASTNode> res = parser.parseExpression();
 		ASTNode node = res.getSuccess().get();
 
 		// Verifica que la expresión se haya parseado correctamente
@@ -158,16 +157,7 @@ public class ParserTest {
 	}
 
 	@Test
-	public void method(){
-
-		List<TokenType> expressions = new ArrayList<>();
-		expressions.add(NUMBER.toTokenType());
-		expressions.add(STRING.toTokenType());
-		expressions.add(IDENTIFIER.toTokenType());
-
-		List<NodeConstructor> list = new ArrayList<>();
-		list.add(getExpressionNodeConstructor(expressions));
-
+	public void method() throws Exception {
 		List<Token> tokens = new ArrayList<>();
 		tokens.add(new Token(IDENTIFIER.toTokenType(), "readInput", new Position(1, 2, 1, 1)));
 		tokens.add(new Token(LEFT_PARENTHESIS.toTokenType(), "(", new Position(2, 1, 1, 2)));
@@ -175,29 +165,21 @@ public class ParserTest {
 		tokens.add(new Token(PLUS.toTokenType(), "+", new Position(4, 1, 1, 4)));
 		tokens.add(new Token(NUMBER.toTokenType(), "2", new Position(5, 1, 1, 5)));
 		tokens.add(new Token(RIGHT_PARENTHESES.toTokenType(), ")", new Position(6, 1, 1, 6)));
+		tokens.add(new Token(SEMICOLON.toTokenType(), ";", new Position(6, 1, 1, 6)));
 
-		TokenBuffer tokenBuffer = new TokenBuffer(tokens);
-		Parser parser = new Parser(list, new ArrayList<>(), tokenBuffer);
-		Try<ASTNode, Exception> res = parser.parseExpression();
+		Accumulator accumulator = new Accumulator(tokens);
+		Parser parser = ParserProvider.provide10(accumulator);
+		Try<ASTNode> res = parser.parseExpression();
 		ASTNode node = res.getSuccess().get();
-		assertTrue(node instanceof Program);
-		Method method = (Method) ((Program) node).getChildren().get(0);
+		assertInstanceOf(Method.class, node);
+		Method method = (Method) node;
 		assertEquals(method.getVariable().toString(), "readInput");
 		assertEquals(method.getArguments().get(0).toString(), "1.0 + 2.0");
 
 	}
 
 	@Test
-	public void methodWithMethods(){
-
-		List<TokenType> expressions = new ArrayList<>();
-		expressions.add(NUMBER.toTokenType());
-		expressions.add(STRING.toTokenType());
-		expressions.add(IDENTIFIER.toTokenType());
-
-		List<NodeConstructor> list = new ArrayList<>();
-		list.add(getExpressionNodeConstructor(expressions));
-
+	public void methodWithMethods() throws Exception {
 		List<Token> tokens = new ArrayList<>();
 		tokens.add(new Token(IDENTIFIER.toTokenType(), "readInput", new Position(1, 2, 1, 1)));
 		tokens.add(new Token(LEFT_PARENTHESIS.toTokenType(), "(", new Position(2, 1, 1, 2)));
@@ -208,63 +190,27 @@ public class ParserTest {
 		tokens.add(new Token(NUMBER.toTokenType(), "1", new Position(7, 1, 1, 7)));
 		tokens.add(new Token(RIGHT_PARENTHESES.toTokenType(), ")", new Position(8, 1, 1, 8)));
 		tokens.add(new Token(RIGHT_PARENTHESES.toTokenType(), ")", new Position(9, 1, 1, 9)));
+		tokens.add(new Token(SEMICOLON.toTokenType(), ";", new Position(9, 1, 1, 9)));
 
-		TokenBuffer tokenBuffer = new TokenBuffer(tokens);
-		Parser parser = new Parser(list, new ArrayList<>(), tokenBuffer);
-		Try<ASTNode, Exception> res = parser.parseExpression();
-		ASTNode node = res.getSuccess().get();
-		assertTrue(node instanceof Program);
-		Method method = (Method) ((Program) node).getChildren().get(0);
-		assertEquals(method.getVariable().toString(), "readInput");
-		ASTNode optionalBinary = method.getArguments().get(0);
-		assertTrue(optionalBinary instanceof BinaryExpression);
-		BinaryExpression binary = (BinaryExpression) optionalBinary;
-		assertEquals(binary.getLeft().toString(), "1.0");
-		assertTrue(binary.getRight() instanceof Method);
-		Method method2 = (Method) binary.getRight();
-		assertEquals(method2.getVariable().toString(), "readInput");
-		assertEquals(method2.getArguments().get(0).toString(), "1.0");
+		Accumulator accumulator = new Accumulator(tokens);
+		Parser parser = ParserProvider.provide10(accumulator);
+
+		Try<ASTNode> astNodeExceptionTry = parser.parseExpression();
+		assertTrue(astNodeExceptionTry.isSuccess());
+		ASTNode astNode = astNodeExceptionTry.getSuccess().get();
+		assertInstanceOf(Method.class, astNode);
+		Method print = (Method) astNode;
+		assertEquals(1, print.getArguments().size());
+
+		Expression readinput = print.getArguments().get(0);
+		assertInstanceOf(BinaryExpression.class, readinput);
+		assertInstanceOf(Method.class, ((BinaryExpression) readinput).getRight());
+
 	}
 
-	@Test
-	public void varWithMethods(){
-
-
-		TokenType let = LET.toTokenType();
-
-		TokenType num = NUMBER_TYPE.toTokenType();
-
-		List<Token> tokens = new ArrayList<>();
-		tokens.add(new Token(let, "let", new Position(1, 2, 1, 1)));
-		tokens.add(new Token(IDENTIFIER.toTokenType(), "a", new Position(2, 1, 1, 2)));
-		tokens.add(new Token(COLON.toTokenType(), ":", new Position(3, 1, 1, 3)));
-		tokens.add(new Token(num, "number", new Position(4, 6, 1, 4)));
-		tokens.add(new Token(EQUALS.toTokenType(), "=", new Position(5, 1, 1, 5)));
-		tokens.add(new Token(IDENTIFIER.toTokenType(), "readInput", new Position(6, 2, 1, 6)));
-		tokens.add(new Token(LEFT_PARENTHESIS.toTokenType(), "(", new Position(7, 1, 1, 7)));
-		tokens.add(new Token(NUMBER.toTokenType(), "1", new Position(8, 1, 1, 8)));
-		tokens.add(new Token(RIGHT_PARENTHESES.toTokenType(), ")", new Position(9, 1, 1, 9)));
-		tokens.add(new Token(SEMICOLON.toTokenType(), ";", new Position(10, 1, 1, 10)));
-
-
-		Parser parser = ParserProvider.provide10(tokens);
-
-		Try<ASTNode, Exception> res = parser.parseExpression();
-		ASTNode node = res.getSuccess().get();
-		assertInstanceOf(Program.class, node);
-		VariableDeclaration var = (VariableDeclaration) ((Program) node).getChildren().get(0);
-		assertEquals(var.getIdentifier().toString(), "a");
-		assertEquals(var.getType().getTypeName(), "number");
-		assertTrue(var.getExpression().isPresent());
-		ASTNode optionalMethod = var.getExpression().get();
-		assertInstanceOf(Method.class, optionalMethod);
-		Method method = (Method) optionalMethod;
-		assertEquals(method.getVariable().toString(), "readInput");
-		assertEquals(method.getArguments().get(0).toString(), "1.0");
-	}
 
 	@Test
-	public void testEntireProgram11() {
+	public void testEntireProgram11() throws Exception {
 		NativeTokenTypes[] tokenTypes = new NativeTokenTypes[] {
 			LET, IDENTIFIER, COLON, STRING_TYPE, EQUALS, STRING, SEMICOLON,
 			PRINTLN, LEFT_PARENTHESIS, IDENTIFIER, RIGHT_PARENTHESES, SEMICOLON,
@@ -277,23 +223,32 @@ public class ParserTest {
 				RIGHT_BRACE,
 			RIGHT_BRACE
 		};
+		Accumulator accumulator = new Accumulator(TokenTestUtil.getTokens(tokenTypes));
+		Parser parser = ParserProvider.provide11(accumulator);
 
-		Parser parser = ParserProvider.provide11(TokenTestUtil.getTokens(tokenTypes));
-
-		Try<ASTNode, Exception> astNodeExceptionTry = parser.parseExpression();
+		assertTrue(parser.hasNext());
+		Try<ASTNode> astNodeExceptionTry = parser.parseExpression();
 		assertTrue(astNodeExceptionTry.isSuccess());
 		ASTNode astNode = astNodeExceptionTry.getSuccess().get();
-		assertInstanceOf(Program.class, astNode);
-		Program program = (Program) astNode;
-		List<ASTNode> children = program.getChildren();
-		assertEquals(3, children.size());
-		assertInstanceOf(VariableDeclaration.class, children.get(0));
-		assertInstanceOf(Method.class, children.get(1));
-		assertInstanceOf(IfStatement.class, children.get(2));
+		assertInstanceOf(VariableDeclaration.class, astNode);
 
-		IfStatement ifStatement = (IfStatement) children.get(2);
+		assertTrue(parser.hasNext());
 
-		List<ASTNode> thenBlock = ifStatement.getThenBlock();
+		Try<ASTNode> methodOrTry = parser.parseExpression();
+		assertTrue(methodOrTry.isSuccess());
+		ASTNode method = methodOrTry.getSuccess().get();
+
+		assertInstanceOf(Method.class, method);
+
+		assertTrue(parser.hasNext());
+
+		Try<ASTNode> ifOrTry = parser.parseExpression();
+		assertTrue(ifOrTry.isSuccess());
+		ASTNode ifStatement = ifOrTry.getSuccess().get();
+
+		assertInstanceOf(IfStatement.class, ifStatement);
+
+		List<ASTNode> thenBlock =((IfStatement) ifStatement).getThenBlock();
 
 		assertEquals(3, thenBlock.size());
 		assertInstanceOf(VariableDeclaration.class, thenBlock.get(0));
@@ -302,7 +257,7 @@ public class ParserTest {
 	}
 
 	@Test
-	public void testIfElse11() {
+	public void testIfElse11() throws Exception {
 		NativeTokenTypes[] tokenTypes = new NativeTokenTypes[] {
 
 				IF, LEFT_PARENTHESIS, BOOLEAN, RIGHT_PARENTHESES, LEFT_BRACE,
@@ -313,18 +268,15 @@ public class ParserTest {
 				RIGHT_BRACE
 		};
 
-		Parser parser = ParserProvider.provide11(TokenTestUtil.getTokens(tokenTypes));
+		Accumulator accumulator = new Accumulator(TokenTestUtil.getTokens(tokenTypes));
+		Parser parser = ParserProvider.provide11(accumulator);
 
-		Try<ASTNode, Exception> astNodeExceptionTry = parser.parseExpression();
+		Try<ASTNode> astNodeExceptionTry = parser.parseExpression();
 		assertTrue(astNodeExceptionTry.isSuccess());
 		ASTNode astNode = astNodeExceptionTry.getSuccess().get();
-		assertInstanceOf(Program.class, astNode);
-		Program program = (Program) astNode;
-		List<ASTNode> children = program.getChildren();
-		assertEquals(1, children.size());
-		assertInstanceOf(IfStatement.class, children.getFirst());
+		assertInstanceOf(IfStatement.class, astNode);
 
-		IfStatement ifStatement = (IfStatement) children.getFirst();
+		IfStatement ifStatement = (IfStatement) astNode;
 
 		List<ASTNode> thenBlock = ifStatement.getThenBlock();
 
@@ -338,7 +290,7 @@ public class ParserTest {
 	}
 
 	@Test
-	public void testIfConst11() {
+	public void testIfConst11() throws Exception {
 		NativeTokenTypes[] tokenTypes = new NativeTokenTypes[] {
 
 				IF, LEFT_PARENTHESIS, BOOLEAN, RIGHT_PARENTHESES, LEFT_BRACE,
@@ -347,18 +299,16 @@ public class ParserTest {
 
 		};
 
-		Parser parser = ParserProvider.provide11(TokenTestUtil.getTokens(tokenTypes));
+		Accumulator accumulator = new Accumulator(TokenTestUtil.getTokens(tokenTypes));
+		Parser parser = ParserProvider.provide11(accumulator);
 
-		Try<ASTNode, Exception> astNodeExceptionTry = parser.parseExpression();
+		Try<ASTNode> astNodeExceptionTry = parser.parseExpression();
 		assertTrue(astNodeExceptionTry.isSuccess());
 		ASTNode astNode = astNodeExceptionTry.getSuccess().get();
-		assertInstanceOf(Program.class, astNode);
-		Program program = (Program) astNode;
-		List<ASTNode> children = program.getChildren();
-		assertEquals(1, children.size());
-		assertInstanceOf(IfStatement.class, children.getFirst());
+		assertInstanceOf(IfStatement.class, astNode);
 
-		IfStatement ifStatement = (IfStatement) children.getFirst();
+
+		IfStatement ifStatement = (IfStatement) astNode;
 
 		List<ASTNode> thenBlock = ifStatement.getThenBlock();
 
@@ -372,48 +322,48 @@ public class ParserTest {
 	}
 
 	@Test
-	public void test() {
+	public void test() throws Exception {
 		NativeTokenTypes[] tokenTypes = new NativeTokenTypes[] {
 				PRINTLN, LEFT_PARENTHESIS, READINPUT, LEFT_PARENTHESIS, STRING, RIGHT_PARENTHESES,
 				RIGHT_PARENTHESES, SEMICOLON
 		};
 
-		Parser parser = ParserProvider.provide11(TokenTestUtil.getTokens(tokenTypes));
+		Accumulator accumulator = new Accumulator(TokenTestUtil.getTokens(tokenTypes));
+		Parser parser = ParserProvider.provide11(accumulator);
 
-		Try<ASTNode, Exception> astNodeExceptionTry = parser.parseExpression();
+		Try<ASTNode> astNodeExceptionTry = parser.parseExpression();
 		assertTrue(astNodeExceptionTry.isSuccess());
 		ASTNode astNode = astNodeExceptionTry.getSuccess().get();
-		assertInstanceOf(Program.class, astNode);
-		Program program = (Program) astNode;
-		List<ASTNode> children = program.getChildren();
-		assertEquals(1, children.size());
-		assertInstanceOf(Method.class, children.getFirst());
-		Method print = (Method) children.getFirst();
-		List<Expression> arguments = print.getArguments();
-		assertInstanceOf(Method.class, arguments.getFirst());
+		assertInstanceOf(Method.class, astNode);
+		Method print = (Method) astNode;
+		assertEquals(1, print.getArguments().size());
+
+		Expression readinput = print.getArguments().get(0);
+		assertInstanceOf(Method.class, readinput);
 	}
 
 	@Test
-	public void readInputSentence() {
+	public void readInputSentence() throws Exception {
 		NativeTokenTypes[] tokenTypes = new NativeTokenTypes[] {
 				LET, IDENTIFIER, COLON, STRING_TYPE, EQUALS,
 				READINPUT, LEFT_PARENTHESIS, STRING, RIGHT_PARENTHESES, SEMICOLON
 		};
 
-		Parser parser = ParserProvider.provide11(TokenTestUtil.getTokens(tokenTypes));
+		Accumulator accumulator = new Accumulator(TokenTestUtil.getTokens(tokenTypes));
+		Parser parser = ParserProvider.provide11(accumulator);
 
-		Try<ASTNode, Exception> astNodeExceptionTry = parser.parseExpression();
+		assertTrue(parser.hasNext());
+		Try<ASTNode> astNodeExceptionTry = parser.parseExpression();
 		assertTrue(astNodeExceptionTry.isSuccess());
 		ASTNode astNode = astNodeExceptionTry.getSuccess().get();
-		assertInstanceOf(Program.class, astNode);
-		Program program = (Program) astNode;
-		List<ASTNode> children = program.getChildren();
-		assertEquals(1, children.size());
-		assertInstanceOf(VariableDeclaration.class, children.getFirst());
-		VariableDeclaration first = (VariableDeclaration) children.getFirst();
-		assertTrue(first.getExpression().isPresent());
-		Expression expression = first.getExpression().get();
-		assertInstanceOf(Method.class, expression);
+		assertInstanceOf(VariableDeclaration.class, astNode);
+
+		Optional<Expression> callExpression = ((VariableDeclaration) astNode).getExpression();
+		assertTrue(callExpression.isPresent());
+		Expression callNode = callExpression.get();
+		assertInstanceOf(Method.class, callNode);
+
+		assertFalse(parser.hasNext());
 	}
 
 
